--- a/templates/mongod.conf.j2
+++ b/templates/mongod.conf.j2
@@ -29,7 +29,7 @@ processManagement:
   timeZoneInfo: /usr/share/zoneinfo
 
 security:
-  authorization: enabled
+  authorization: {{ mongodb_authorization }}
 
 #operationProfiling:
 
